# react-native-mcl

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-mcl.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp_adapter.cpp  hashes.h
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativemcl/: MclModule.java  MclPackage.java
cpp/bls/mcl/src/: base64.ll  gen
cpp/bls/mcl/src/gen.dSYM/Contents/Resources/DWARF/: gen
cpp/mcl/src/: gen
cpp/src/gen.dSYM/Contents/Resources/DWARF/: gen
example/: app.json  index.tsx  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativemcl/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativemcl/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MclExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MclExample.xcodeproj/: project.pbxproj
example/ios/MclExample.xcodeproj/xcshareddata/xcschemes/: MclExample.xcscheme
example/ios/MclExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Macros.h  Mcl.h  Mcl.m
ios/Mcl.xcodeproj/: project.pbxproj
src/: Utils.ts  index.tsx
